<resources>
    <string name="app_name">Osobní evidence péče</string>
    <string name="edit">Upravit</string>
    <string name="export">Exportovat</string>
    <string name="delete">Smazat</string>
    <string name="add_medical_record">Přidat lék. zprávu</string>
    <string name="filter_medical_records">Filtrovat lékařské zprávy</string>
    <string name="medical_records_filter_by_date">Datumu</string>
    <string name="medical_records_filter_by_problem_category">Kategorie problému</string>
    <string name="medical_records_filter_by_medical_worker">Lékaře</string>
    <string name="text_simple_separator">/</string>
    <string name="medical_records_add_file">Přidat soubor</string>
    <string name="add_edit_medical_records_save">Uložit</string>
    <string name="record_filter">Filtrovat</string>
    <string name="select_image">Vyberte soubor</string>
    <string name="medical_record_take_photo">Vyfotit zprávu</string>
    <string name="medical_record_attach_file">Vybrat soubor</string>
    <string name="medical_record_diagnose">Diagnóza</string>
    <string name="medical_record_visit_date">Datum návštěvy</string>
    <string name="patient">Pacient</string>
    <string name="select_options_cancel">Zrušit</string>
    <string name="select_options_submit">Použít</string>
    <string name="select_file_error">Při přidávání souboru se vyskytla chyba</string>
    <string name="select_file_select_only_file">Pouze soubor</string>
    <string name="add_eddit_medical_record_file_limit_reached">Maximální počet přiložených souborů dosažen</string>
    <string name="no_results">Žádné výsledky</string>
    <string name="results_could_not_be_loaded">Nepodařilo se načíst výsledky</string>
    <string name="add_edit_error">Při přidávání se vyskytla chyba</string>
    <string name="add_edit_success">Lékařská zpráva byla úspěšně přidána</string>
    <string name="add_edit_patient_not_selected">Pacient není vybrán</string>
    <string name="date_picker_description">Vyberte datum návštěvy</string>
    <string name="medical_record_no_medical_worker">Žádný lékař</string>
    <string name="medical_record_no_diagnose">Žádná diagnóze</string>
    <string name="navigation_add_medical_record">Nová lékařská zpráva</string>
    <string name="navigation_edit_medical_record">Upravit lékařskou zprávu</string>
    <string name="navigation_select_file">Nový soubor pro lékařskou zprávu</string>
    <string name="filter_problem_categories">Kategorie problémů</string>
    <string name="filter_medical_workers">Lékaři</string>
    <string name="label_last_edited">Změněno %s</string>
    <string name="label_last_edited_no_data">Žádná data</string>
    <string name="no_medical_records">Žádné lék. zprávy</string>
    <string name="medical_record_filter">Filtrovat</string>
    <string name="field_problem_category">Kategorie problému</string>
    <string name="field_diagnose">Diagnóza</string>
    <string name="description_medical_worker">Lékařský pracovník</string>
    <string name="description_problem_category">Kategorie problému</string>
    <string name="field_medical_worker">Lékařský pracovník</string>
    <string name="navigation_detail_medical_record">Detail lék. zprávy</string>
    <string name="detail_medical_record_medical_worker">Lékařský pracovník</string>
    <string name="detail_medical_record_diagnose">Diagnóza</string>
    <string name="no_problem_category">Žádná kategorie problému</string>
    <string name="no_diagnose">Žádná diagnóza</string>
    <string name="no_medical_worker">Žádný lék. pracovník</string>
    <string name="medical_record_problem_category_detail_title">Lékařské zprávy</string>
    <string name="medical_record_problem_category_detail_description">Všechny lékařské zprávy přiřazené k této kategorii.</string>
    <string name="export_medical_record_failed">Nepodařilo se exportovat lékařskou zprávu</string>
    <string name="record_deleted">Lékařská zpráva byla smazána</string>
    <string name="record_not_found">Lékařská zpráva nebyla nalezena</string>
    <string name="delete_record_title">Smazat zprávu</string>
    <string name="delete_record_message">Přejete si smazat tuto lékařskou zprávu?</string>
    <string name="select_options_dialog_title">Nalezené možnosti</string>
    <string name="navigation_detail_gallery">Galerie zpráv</string>
    <string name="detail_medical_record_title">Lékařská zpráva</string>
    <string name="detail_medical_record_visited_at">Ze dne %s</string>
    <string name="detail_medical_record_files">Přílohy</string>
</resources>
