<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layout_margin"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_diagnose"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/medical_record_diagnose">

        <AutoCompleteTextView
            android:id="@+id/diagnose_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/medical_record_diagnose"
            android:inputType="none"
            android:labelFor="@id/text_input_layout_diagnose" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/medical_record_visit_date">

        <AutoCompleteTextView
            android:id="@+id/date_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/medical_record_visit_date"
            android:inputType="none"
            android:labelFor="@id/text_input_layout_date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_patient"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/patient"
        android:visibility="gone">

        <AutoCompleteTextView
            android:id="@+id/patient_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient"
            android:inputType="none"
            android:labelFor="@id/text_input_layout_patient" />
    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>
