<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_list_medical_records"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layout_margin"
    tools:context=".ui.view.ListMedicalRecordsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/text_view_no_medical_records"
            android:text="@string/no_medical_records"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textColor="@color/beige_500"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="3"
            tools:listitem="@layout/item_grouped_items" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_filter_medical_records"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/beige_700"
            android:contentDescription="@string/filter_medical_records"
            android:src="@drawable/ic_filter"
            app:fabCustomSize="48dp"

            app:tint="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_medical_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/green_500"
            android:clickable="true"
            android:contentDescription="@string/add_medical_record"
            android:focusable="true"
            android:padding="8dp"
            app:tint="@color/white"
            app:srcCompat="@drawable/ic_add" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
