<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    tools:context=".ui.view.selectFile.SelectFileFragment">

    <ImageView
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="@color/white"
        android:contentDescription="@string/select_image"
        app:layout_constraintBottom_toTopOf="@id/control"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_round_white"
            android:backgroundTint="@color/white"
            android:padding="16dp"
            app:icon="@drawable/ic_close"
            app:iconGravity="textStart"
            app:iconPadding="0dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/confirmButton"
            android:layout_toEndOf="@id/cancelButton"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/takePhotoButton"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button_round_purple"
                android:contentDescription="@string/medical_record_take_photo"
                app:icon="@drawable/ic_camera"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/attachFileButton"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button_round_purple"
                android:contentDescription="@string/medical_record_attach_file"
                app:icon="@drawable/ic_attach_file"

                app:iconGravity="textStart"
                app:iconPadding="0dp" />
        </LinearLayout>

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_round_white"
            android:layout_marginEnd="8dp"
            app:icon="@drawable/ic_check"
            app:iconGravity="textStart"
            android:visibility="invisible"
            app:iconPadding="0dp"/>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
