<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layout_margin"
    tools:context=".ui.view.addEdit.AddEditMedicalRecordsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_files_box"
        style="@style/BaseFrontBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/box_background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/layout_counter_files"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/text_view_current_size_files"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="\?"
                    tools:text="3" />

                <TextView
                    android:id="@+id/text_view_separator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_simple_separator" />

                <TextView
                    android:id="@+id/text_view_total_size_files"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="\?"
                    tools:text="3" />
            </LinearLayout>

            <Button
                android:id="@+id/button_add_file"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medical_records_add_file"
                app:icon="@drawable/ic_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_files"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_line"
            tools:itemCount="1"
            tools:listitem="@layout/item_file_thumbnail" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layout_form"
        style="@style/BaseFrontBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/box_background_light"
        android:backgroundTint="@color/box_background_light"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_files_box">


        <cz.vvoleman.phr.common.ui.view.datepicker.DatePicker
            android:id="@+id/date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <cz.vvoleman.phr.featureMedicalRecord.ui.component.diagnoseSelector.DiagnoseSelector
            android:id="@+id/diagnose_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_problem_category"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_color"
            app:errorEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/spinner_problem_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_problem_category"
                android:inputType="none"
                android:labelFor="@id/text_input_layout_colors" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_medical_worker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_save"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_edit_medical_records_save" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
